dark mode & fixes

--- a/index.css
+++ b/index.css
@@ -6,3 +6,16 @@
 .container{
     margin-left: 15px;
 }
+
+.lightgray::placeholder {
+    color: #bdbdbd;
+    opacity: 1;
+ }
+ 
+ .lightgray:-ms-input-placeholder {
+    color: #bdbdbd;
+ }
+ 
+ .lightgray::-ms-input-placeholder {
+    color: #bdbdbd;
+ }
